--- a/views/all-properties.ejs
+++ b/views/all-properties.ejs
@@ -7,7 +7,7 @@
 <!-- /include hero -->
 
 <!-- include all-properties -->
-<%- include('include/_all-properties') %>
+<%- include('include/_all-properties', { apartments: apartments }) %>
 <!-- /include all-properties -->
 
 <!-- include cta -->
