--- a/views/apply-admin.ejs
+++ b/views/apply-admin.ejs
@@ -3,7 +3,7 @@
 <!-- /include header -->
 
 <!-- include application-->
-<%- include('include/_apply-admin', { aid: aid, req: req }) %>
+<%- include('include/_apply-admin', { aid: aid, location: location }) %>
 <!-- /include application-->
 
 <!-- include cta -->
