--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -7,7 +7,7 @@
 <!-- /include hero -->
 
 <!-- include blog -->
-<%- include('include/_blog') %>
+<%- include('include/_blog', { apartments: apartments }) %>
 <!-- /include blog -->
 
 <!-- include cta -->
