--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -125,7 +125,7 @@
         </a> -->
 
         <a href="/home" class="logo">
-          <img style="width: 50%; float: left; margin-right: 10px;" src="./images/hub.jpg" alt="Homeverse logo">
+          <img src="./images/hub.png" alt="Homehub logo">
         </a>
         
 
@@ -151,20 +151,20 @@
               </li>
 
               <li>
+                <a href="/all-properties" class="navbar-link" data-nav-link>Apartments</a>
+              </li>
+
+              <li>
                 <a href="/about" class="navbar-link" data-nav-link>About</a>
               </li>
 
               <li>
                 <a href="/service" class="navbar-link" data-nav-link>Service</a>
               </li>
-
-              <li>
-                <a href="/all-properties" class="navbar-link" data-nav-link>Property</a>
-              </li>
-
+<!-- 
               <li>
                 <a href="/blog" class="navbar-link" data-nav-link>Blog</a>
-              </li>
+              </li> -->
 
               <li>
                 <a href="/contact" class="navbar-link" data-nav-link>Contact</a>
