--- a/views/include/_hero-admin.ejs
+++ b/views/include/_hero-admin.ejs
@@ -22,7 +22,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
             </p>
 
-            <a href="/create-apartment">
+            <a href="/create-apartment-admin">
             <button class="btn">Create A Post</button>
           </a>
 
