--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -23,11 +23,11 @@
   <!-- /include features -->
   
   <!-- include blog -->
-  <%- include('include/_blog') %>
+  <%- include('include/_blog', { apartments: apartments }) %>
   <!-- /include blog -->
   
   <!-- include cta -->
-  <%- include('include/_cta') %>
+  <%- include('include/_cta-admin') %>
   <!-- /include cta -->
   
   
