--- a/views/profile-admin.ejs
+++ b/views/profile-admin.ejs
@@ -13,6 +13,7 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="/css/profile.css" />
+
   </head>
   <body>
     <div class="header__wrapper">
@@ -65,19 +66,113 @@
               <li><a href="">posts</a></li>
               <li><a href="">galleries</a></li>
               <li><a href=""onclick="goBack()">home</a></li>
-              <li><a href="/create-apartment">create post</a></li>
+              <li><a href="/create-apartment-admin">create post</a></li>
             </ul>
             <button>Follow</button>
           </nav>
 
-          <div class="photos">
+          <!-- <div class="photos">
             <img src="/images/img_1.avif" alt="Photo" />
             <img src="/images/img_2.avif" alt="Photo" />
             <img src="/images/img_3.avif" alt="Photo" />
             <img src="/images/img_4.avif" alt="Photo" />
             <img src="/images/img_5.avif" alt="Photo" />
             <img src="/images/img_6.avif" alt="Photo" />
-          </div>
+          </div> -->
+
+          <ul class="property-list has-scrollbar">
+            <% apartments.forEach(apt => { %>
+              <li class="property-item">
+                <div class="property-card">
+                  <figure class="card-banner">
+                    <!-- Dynamic image source -->
+                    <% if (apt.relativePath) { %>
+                      <img src="<%= apt.relativePath %>" alt="<%= apt.title %>" />
+                    <% } else { %>
+                      <!-- Default image placeholder if photo doesn't exist -->
+                      <img src="/path/to/default/image.jpg" alt="default image" />
+                    <% } %>
+          
+                    <!-- Dynamic badge indicating availability -->
+                  <div class="card-badge top-right"><%= apt.availabilty %></div>
+          
+                    <!-- Dynamic badge indicating status (e.g., For Rent, For Sale) -->
+                   <!-- Dynamic badge indicating status -->
+                  <div class="card-badge green top-left"><%= apt.status %></div>
+          
+                    <div class="banner-actions">
+                      <!-- Button with location information -->
+                      <button class="banner-actions-btn">
+                        <ion-icon name="location"></ion-icon>
+                        <address><%= apt.location %></address>
+                      </button>
+                      <!-- Button with number of bedrooms -->
+                      <button class="banner-actions-btn">
+                        <ion-icon name="bed-outline"></ion-icon>
+                        <span><%= apt.bedrooms %></span>
+                      </button>
+                      <!-- Button with number of bathrooms -->
+                      <button class="banner-actions-btn">
+                        <ion-icon name="man-outline"></ion-icon>
+                        <span><%= apt.bathrooms %></span>
+                      </button>
+                    </div>
+                  </figure>
+                  <div class="card-content">
+                    <!-- Dynamic price -->
+                    <div class="card-price">
+                      <strong><%= apt.currency %> <%= apt.price.toLocaleString('en-US', { maximumFractionDigits: 2 }) %></strong><%= apt.duration %> <pre><%= apt.negotiation %></pre>
+                    </div> 
+                    <!-- Dynamic title -->
+                    <h3 class="h3 card-title">
+                      <a href="#"><%= apt.title %></a>
+                    </h3>
+                    <!-- Dynamic description -->
+                    <p class="card-text">
+                      <%= apt.description %>
+                    </p>
+                    <ul class="card-list">
+                      <!-- Placeholder for square footage -->
+                      <li class="card-item">
+                        <strong>Apartment ID (AID): AID<%= apt.aid %></strong>
+                        <a href="/admin-application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
+                          <span>Contact site: Administrator</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="card-footer">
+                    <div class="card-author">
+                      <div>
+                        <!-- Dynamic user fullname -->
+                        <p class="author-name"> Created by:
+                          <a href=""><%= apt.createdBy %></a>
+                        </p>
+                        <!-- Dynamic user bio -->
+                        <p class="author-title"></p>
+                      </div>
+                    </div>
+                    <div class="card-footer-actions">
+                      <!-- Action buttons (placeholders) -->
+                      <button class="card-footer-actions-btn">
+                        <ion-icon name="resize-outline"></ion-icon>
+                      </button>
+                      <button class="card-footer-actions-btn">
+                        <ion-icon name="heart-outline"></ion-icon>
+                      </button>
+                      <button class="card-footer-actions-btn">
+                        <ion-icon name="add-circle-outline"></ion-icon>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            <% }); %>
+          </ul>
+          
+        
+
+
         </div>
       </div>
     </div>
