--- a/views/include/_cta-admin.ejs
+++ b/views/include/_cta-admin.ejs
@@ -11,7 +11,7 @@
 
               <p class="card-text">We can help you realize your dream of a new home</p>
             </div>
-            <a href="/all-properties">
+            <a href="/all-admin-properties">
             <button class="btn cta-btn">
               <span>Explore Properties</span>
 
