--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -25,6 +25,7 @@
       margin-bottom: 5px; /* Adjust as needed */
   }
   
+
   </style>
   <!-- 
     - favicon
@@ -120,18 +121,18 @@
 
     <div class="header-bottom">
       <div class="container">
-
-        <a href="#" class="logo">
-          <img style="width: 50%; float: left; margin-right: 10px;" src="./images/hub.jpg" alt="Homehub logo">
+        
+        <a href="/admin-home" class="logo">
+          <img src="./images/hub.png" alt="Homehub logo">
         </a>
 
         <nav class="navbar" data-navbar>
 
           <div class="navbar-top">
-
+<!-- 
             <a href="#" class="logo">
               <img src="./images/homehub-logo.jpg" alt="Homehub logo">
-            </a>
+            </a> -->
 
             <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
               <ion-icon name="close-outline"></ion-icon>
@@ -147,6 +148,10 @@
               </li>
 
               <li>
+                <a href="/all-admin-properties" class="navbar-link" data-nav-link>Apartments</a>
+              </li>
+
+              <li>
                 <a href="/admin-about" class="navbar-link" data-nav-link>About</a>
               </li>
 
@@ -154,13 +159,9 @@
                 <a href="/admin-service" class="navbar-link" data-nav-link>Service</a>
               </li>
 
-              <li>
-                <a href="/all-admin-properties" class="navbar-link" data-nav-link>Property</a>
-              </li>
-
-              <li>
+              <!-- <li>
                 <a href="/admin-blog" class="navbar-link" data-nav-link>Blog</a>
-              </li>
+              </li> -->
 
               <li>
                 <a href="/contact" class="navbar-link" data-nav-link>Contact</a>
