--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 <!-- /include features -->
 
 <!-- include blog -->
-<%- include('include/_blog') %>
+<%- include('include/_blog', { apartments: apartments }) %>
 <!-- /include blog -->
 
 <!-- include cta -->
