--- a/views/administrator.ejs
+++ b/views/administrator.ejs
@@ -80,8 +80,8 @@
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
-              <span class="material-icons-outlined">poll</span> Reports
+            <a href="/sponsorship" target="_blank">
+              <span class="material-icons-outlined">sponsor</span> Sponsorship
             </a>
           </li>
           <li class="sidebar-list-item">
