--- a/views/include/_about.ejs
+++ b/views/include/_about.ejs
@@ -1,6 +1,6 @@
  <!-- 
         - #ABOUT
-      -->
+  -->
 
       <section class="about" id="about">
         <div class="container">
@@ -60,8 +60,10 @@
             </ul>
 
             <p class="callout">
-              "Enimad minim veniam quis nostrud exercitation
-              llamco laboris. Lorem ipsum dolor sit amet"
+              At Homehub Agency, we believe that finding your dream home should be an 
+              exciting and enjoyable experience. Our platform is designed to make the 
+              process of buying, selling, or renting properties as seamless 
+              and stress-free as possible. 
             </p>
 
             <a href="#service" class="btn">Our Services</a>
