--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -120,23 +120,23 @@
             </li>
 
             <li>
-              <a href="#" class="footer-link">Wish List</a>
-            </li>
-
-            <li>
-              <a href="/" class="footer-link">Login</a>
-            </li>
-
-            <li>
               <a href="/update-password/<%= user._id %>" class="footer-link">My account</a>
             </li>
 
             <li>
-              <a href="#" class="footer-link">Terms & Conditions</a>
+              <a href="/services-fee-agreement" class="footer-link">Service Fee Agreement</a>
             </li>
 
             <li>
-              <a href="#" class="footer-link">Promotional Offers</a>
+              <a href="#" class="footer-link">Registration Process Statement</a>
+            </li>
+
+            <li>
+              <a href="/terms-and-conditions" class="footer-link">Terms & Conditions</a>
+            </li>
+
+            <li>
+              <a href="#" class="footer-link">Privacy Policy</a>
             </li>
 
           </ul>
