--- a/views/include/_sponsorship.ejs
+++ b/views/include/_sponsorship.ejs
@@ -148,10 +148,10 @@
                 <th>Phone No.</th>
                 <th>Location</th>
                 <th>Address</th>
-                <th>Negotiation</th>
+                <!-- <th>Negotiation</th>
                 <th>Avaliablity</th>
-                <th>Verification</th>
-                <!-- <th>Sponsored</th> -->
+                <th>Verification</th> -->
+                <th>Sponsored</th>
                 <th>Actions</th> <!-- New column for actions -->
             </tr>
             </thead>
@@ -164,17 +164,12 @@
                 <td class="hover"><%= apartment.phone %></td>
                 <td class="hover"><%= apartment.location %></td>
                 <td class="hover"><%= apartment.address %></td>
-                <td class="hover"><%= apartment.negotiation %></td>
-                <td class="hover"><%= apartment.availabilty %></td>
-                <td class="hover <%= apartment.verification === 'verified' ? 'status-green-bg' : (apartment.verification === 'not verified' ? 'status-red-bg' : '') %>"> 
-                    <%= apartment.verification %>
-                </td>
                 <td class="hover <%= apartment.sponsored === 'true' ? 'sponsored-blue-bg' : (apartment.sponsored === 'false' ? 'sponsored-grey-bg' : 'status-default-bg') %>"> 
                     <%= apartment.sponsored %>
                 </td>
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
-                    <a href="/edit-admin-apartment/<%= apartment._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
+                    <a href="/edit-sponsorship/<%= apartment._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
                     <a href="#" onclick="deleteApartmentById('<%= apartment._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
                     <a href="/view-apartmet-details/<%= apartment._id %>"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
