--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -23,7 +23,7 @@
   <!-- /include features -->
   
   <!-- include blog -->
-  <%- include('include/_blog', { apartments: apartments }) %>
+  <%- include('include/_blog-admin', { apartments: apartments }) %>
   <!-- /include blog -->
   
   <!-- include cta -->
