--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="./css/login.css">
-    <title>Login</title>
+    <link rel="stylesheet" href="./css/signup.css">
+    <title>Sign Up</title>
 </head>
 <body>
     <div class="container">
-        <div class="form-container login">
-            <form action="/login" method="post">
-                <h1>Login</h1>
+        <div class="form-container sign-up">
+            <form action="/signup" method="post" enctype="multipart/form-data">
+                <h1>Create Account</h1>
                 <!-- <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
-                <span>or use your account</span> -->
+                <span>or use your email for registration</span> -->
+                <input type="text" name="fullname" placeholder="Full Name" required>
                 <input type="text" name="username" placeholder="Username" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="text" name="phone" placeholder="Phone Number" required>
                 <input type="password" name="password" placeholder="Password" required>
-                <a href="#">Forgot Your Password?</a>
-                <button type="submit">Login</button>
-                <a href="/signup"><p>Don't have an account? Sign Up</a></p>
+                <input type="file" name="photo" accept="image/*">
+                <button type="submit">Sign Up</button>
+                <p>Already have an account? <a href="/">Login</a></p>
             </form>
         </div>
     </div>
